--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,17 +18,22 @@
         </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-      <ion-searchbar placeholder="Search">
-
-      </ion-searchbar>
+      <form #form="ngForm" (ngSubmit)="searchByName(form.value.name)" method="post" (keyup.enter)="searchByName(form.value.name)">
+        <ion-item>
+           <ion-label position="floating">Write Name of Drink:</ion-label>
+           <ion-input ngModel class="form-control" type="text" name="name" required></ion-input>
+        </ion-item>
+        <ion-button class="ion-margin-top" type="submit" expand="block" color="primary" [disabled]="!form.valid">
+           Search</ion-button>
+     </form>
        <ion-button class="ion-margin-top" expand="block" color="success" (click)="recipe()">Go to Recipe</ion-button>
-       <ion-item *ngFor="let recipeElement of recipeItemArray" class="ion-no-padding ion-padding-top">
+       <ion-item *ngFor="let recipeElement of recipeItemArray" class="ion-no-padding ion-padding-top" (click)="recipe()">
         
              <ion-toolbar>
-                <ion-title>{{recipeElement.name}}</ion-title>
+                <ion-title>{{recipeElement.strDrink}}</ion-title>
                 <ion-avatar slot="start">
                   <ion-avatar>
-                    <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+                    <img src={{recipeElement.strDrinkThumb}}>
                   </ion-avatar>
                 </ion-avatar>
               </ion-toolbar>
