--- a/src/app/recipe/recipe/recipe.page.html
+++ b/src/app/recipe/recipe/recipe.page.html
@@ -7,7 +7,7 @@
     </ion-buttons>
     <ion-title>Recipe</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="clickedStar()">
+      <ion-button (click)="addBookmark()">
         <ion-icon slot="icon-only" name="star"></ion-icon>
       </ion-button>
     </ion-buttons>
